fix(now): scope scrollbar-color to /now page

--- a/src/scss/base/_body.scss
+++ b/src/scss/base/_body.scss
@@ -6,6 +6,7 @@ body {
   font-family: var(--font-primary-regular);
   -moz-osx-font-smoothing: auto;
   -webkit-font-smoothing: antialiased;
+  scrollbar-color: var(--scrollbar-color, auto);
   text-rendering: optimizeLegibility;
   margin: 0;
 }
