--- a/src/scss/themes/_now.scss
+++ b/src/scss/themes/_now.scss
@@ -1,6 +1,7 @@
 [data-theme="now"] {
   --body-color: var(--pantone-black-rooster);
   --background-color: var(--pantone-mocha-mousse);
+  --scrollbar-color: hsl(60, 33%, 93%) hsl(10, 47%, 93%);
 
   --menu-shadow-color: var(--pantone-black-rooster);
   --menu-background-color: var(--pantone-black-rooster);
